feat: enhance theme configuration and update extension logic
- Introduced configuration properties for light and dark themes in package.json.
- Updated extension logic to utilize new theme configuration, allowing for dynamic theme switching based on the time of day.
- Improved status bar item to reflect current theme and mode.
- Refined comments and code structure for better clarity and maintainability.

--- a/package.json
+++ b/package.json
@@ -21,7 +21,32 @@
         "command": "day-and-knight.toggle",
         "title": "Toggle"
       }
-    ]
+    ],
+    "configuration": {
+      "title": "Day and Knight",
+      "properties": {
+        "day-and-knight.light-themes": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "default": [
+            "Default Light+"
+          ],
+          "description": "Light themes to use during daytime."
+        },
+        "day-and-knight.dark-themes": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "default": [
+            "Default Dark+"
+          ],
+          "description": "Dark themes to use during nighttime."
+        }
+      }
+    }
   },
   "scripts": {
     "vscode:prepublish": "npm run compile",
