chore: add icon property to package.json

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Automatically switch to dark mode at sunset",
   "repository": "https://github.com/yashwanth-reddy909/day-and-knight",
   "publisher": "yrv-publishes",
+  "icon": "assets/icon.png",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.109.0"
