--- a/.github/workflows/publish-vscode.yml
+++ b/.github/workflows/publish-vscode.yml
@@ -24,9 +24,11 @@ jobs:
       - name: Validate changelog contains tag version
         run: |
           TAG_VERSION="${GITHUB_REF_NAME#v}"
+          echo "REF_NAME: $GITHUB_REF_NAME"
+          echo "TAG_VERSION: $TAG_VERSION"
           node -e '
             const fs = require("fs");
-            const tagVersion = process.env.TAG_VERSION;
+            const tagVersion = process.argv[1];
             const changelog = fs.readFileSync("CHANGELOG.md", "utf8");
             const lines = changelog.split(/\r?\n/);
             const hasVersionHeading = lines.some((line) =>
@@ -38,7 +40,7 @@ jobs:
               );
               process.exit(1);
             }
-          '
+          ' "$TAG_VERSION"
 
       - name: Publish to VS Code Marketplace
         run: |
