chore: add npm dependency installation step in VS Code publishing workflow

--- a/.github/workflows/publish-vscode.yml
+++ b/.github/workflows/publish-vscode.yml
@@ -21,6 +21,9 @@ jobs:
           node-version: 22
           cache: npm
 
+      - name: Install dependencies
+        run: npm install
+
       - name: Validate changelog contains tag version
         run: |
           TAG_VERSION="${GITHUB_REF_NAME#v}"
