--- a/.github/workflows/lint-format.yml
+++ b/.github/workflows/lint-format.yml
@@ -19,7 +19,10 @@ jobs:
           cache: npm
 
       - name: Install dependencies
-        run: npm ci
+        run: |
+          npm -v
+          node -v
+          npm ci
 
       - name: Run linter
         run: npm run lint
